--- a/app-marketplace/marketplace-backend/Dockerfile
+++ b/app-marketplace/marketplace-backend/Dockerfile
@@ -7,13 +7,13 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["App.Backend/App.Backend.csproj", "App.Backend/"]
-RUN dotnet restore "App.Backend/App.Backend.csproj"
 COPY . .
+RUN dotnet restore ". App.Backend/App.Backend.csproj"
 WORKDIR "/src/App.Backend"
 RUN dotnet build "App.Backend.csproj" -c Release -o /app/build
 
 FROM build AS publish
+WORKDIR "/src/App.Backend"
 RUN dotnet publish "App.Backend.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
