[OCO-38] Marketplace - Adiciona Feature de upload de arquivos

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /app-marketplace/marketplace-backend/.vs
 /app-marketplace/marketplace-frontend-fix/node_modules
 /app-marketplace/marketplace-frontend-fix/.angular
+/app-marketplace/marketplace-backend/App.Backend/Attachments
