--- a/app-marketplace/marketplace-backend/Backend.Application/Backend.Application.csproj
+++ b/app-marketplace/marketplace-backend/Backend.Application/Backend.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="7.3.4" />
   </ItemGroup>
 
   <ItemGroup>
