--- a/app-marketplace/marketplace-backend/App.Backend/Properties/launchSettings.json
+++ b/app-marketplace/marketplace-backend/App.Backend/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "App.Backend.Livraria": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
