--- a/app-marketplace/marketplace-frontend-fix/package.json
+++ b/app-marketplace/marketplace-frontend-fix/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --configuration production --host 0.0.0.0 --public-host ocorp.ddns.net",
+    "start": "ng serve --configuration production --host 0.0.0.0 --public-host ocorp.viewdns.net",
 	"build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
