[OCO-0] Ajuste de configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /app-marketplace/marketplace-backend/.vs
+/app-marketplace/marketplace-backend/App.Backend/appsettings.json
+/app-marketplace/marketplace-backend/App.CDN/appsettings.json
 /app-marketplace/marketplace-frontend-fix/node_modules
 /app-marketplace/marketplace-frontend-fix/.angular
 /app-marketplace/marketplace-backend/App.Backend/Attachments
